# Auto-GPT-Obsidian

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: feature-request.md
.github/workflows/: issues-repository-project.yml  test-plugin-installation.yml
docs/: note_object_breakdown.md
docs/code/: code.md
docs/features/: flashcard_generation.md
docs/meta/: feature-template.md  object-template.md  test-template.md
docs/meta/templates/: feature (template).md  object (template).md  test (template).md
docs/objects/: obsidian_vault object.md
docs/onboarding/: Guide to __init__ in AutoGPTObsidian.md
src/obsidian/: __init__.py  avl_tree.py  guidance_example.py  objects.py  obsidian.py  obsidianNote.py  obsidianVault.py  obsidian_constants.py  obsidian_frontmatter.py  obsidian_note.py  obsidian_vault.py  osidian_tools_example.py  splay_tree2_example.py  splay_tree_example.py  test_obsidian.py
src/test_vault/.obsidian/: community-plugins.json  hotkeys.json  workspace.json
