[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto_gpt_obsidian_plugin"
version = "0.0.2"
authors = [
  { name="Conner Ohnesorge", email="conneroisu@outlook.com" },
]
description = "A plugin for autogpt that allows interaction with Obsidian."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["abstract-singleton"]

[project.urls]
"Homepage" = "https://github.com/conneroisu/Auto-GPT-Obsidian"
"Bug Tracker" = "https://github.com/conneroisu/Auto-GPT-Obsidian/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = ""

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"